# asr-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
packaging/: asr-rs.service  asr-rs.spec
src/: audio.rs  config.rs  filter.rs  inject.rs  main.rs  postprocess.rs  ws.rs
